Update commit description in appendix

--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -1112,6 +1112,253 @@ l_{\nu}
 \end{proof}
 
 
+\section{Описание коммитов, содержащих исправления ошибок связанных с состоянием гонки}
+\label{sect_commits_desc}
+
+\textbf{Коммит:} f1a8a3f
+
+Данный патч исправляет состояние гонки в между \textit{bond\_store\_updelay/downdelay}
+и \textit{bond\_store\_miimon}, которое может привести к делению на ноль.
+Важной особенностью данного патча является то, что он не полностью исправляет ошибку: для двух функций \textit{bond\_store\_updelay/downdelay} добавляется захват блокировки \textit{rtnl}, однако, второй поток \textit{bond\_store\_miimon}, в котором производится установка нулевого значения, по-прежнему вызывается без блокировок.
+Таким образом, состояние гонки остается возможным.
+Данный коммит был включен в версию Linux v2.6.32.61, при том что в версию Linux v3.7-rc8 был ранее включен коммит fbb0c41, который добавлял соответствующую блокировку в \textit{bond\_store\_miimon}.
+Однако, он включал в себя еще несколько изменений и, видимо, поэтому не был в это же время применен к ветке 2.6.
+
+CPALockator обнаруживает возможное состояние гонки между \textit{bond\_store\_miimon} и \textit{bond\_change\_active\_slave}, который печатает значение под блокировкой \textit{rtnl}.
+Так как CPALockator выдает только одно предупреждение для каждой переменной, другой путь к \textit{bond\_store\_updelay/downdelay} не печатается.
+Таким образом, нельзя заключить, что была найдена исходная ошибка, однако, найденное им предупреждение является истинным, которое не было исправлено в версии Linux v2.6.32.61, но исправляется в fbb0c41.
+
+Для обнаружения этой ошибки потребовалось добавление модели окружения для трех структур \textit{device\_attributes}.
+
+\textbf{Статус:} найдена не полностью.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 883f30e
+
+Данный коммит исправлет потенциальное состояние гонки при доступе к данным пользователя из функций \textit{snd\_ctl\_elem\_user\_get}, \textit{snd\_ctl\_elem\_user\_put} и \textit{snd\_ctl\_elem\_user\_tlv}.
+Данные функции вызываются через функциональные указатели, например, \textit{snd\_ctl\_elem\_user\_put} вызывается в функции \textit{master\_put}, которая выставляется как обработчик \textit{put} в некоторой структуре. 
+В подготовленной верификационной задаче присутствует только один вызов по этому указателю (из \textit{snd\_ctl\_elem\_write}), который производится под семафором \textit{card->controls\_rwsem}.
+Этим же семафором защищаются парные вызовы.
+Из описания коммита остается неясным, какой именно стек вызова приводит к ошибке.
+Скорее всего, эти функции могут вызываться из другого модуля, но определить из какого не удалось.
+При отключении поддержки семафоров данное состояние гонки находится.
+Изменений модели окружения не потребовалось.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} c99bd4f
+
+Коммит исправляет ошибку связанную с использованием памяти после ее освобождения (англ. use-after-free).
+Теоретически, некоторый подкласс таких ошибок может быть найден с помощью инструмента CPALockator, если освобождение и доступ к памяти может осуществляться параллельно.
+По сути, при этом мы находим состояние гонки. 
+Если же доступ к памяти не может происходить параллельно, но возможны ситуации, при которых доступ производится строго после, то такие ошибки мы не можем находить в текущей конфигурации, однако возможно расширение инструмента для поиска таких ошибок, то есть, концептуально это не является ограничением.
+В данном случае ошибка не находится из-за неточной модели памяти, при которой мы не можем сопоставить освобождение целой структуры и доступ к одному из ее полей.
+Данная проблема также не является принципиальной и может быть решена с использованием более точной модели.
+Тем не менее, в данный момент ошибка не может быть найдена.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 1a81087
+
+В данном коммите исправляется потенциальное состояние гонки между \textit{tcp\_illinois\_info} и \textit{rtt\_reset}, которое приводит к делению на ноль.
+CPALockator выдает предупреждение о том, что функция \textit{rtt\_reset} может записывать данные без блокировок, однако парной функцией оказывается та же \textit{rtt\_reset}, так как обработчики из \textit{tcp\_congestion\_ops} могут вызываться параллельно друг с другом.
+Строго говоря, данная ситуация также удовлетворяет определению состояния гонки, однако не может привести ни к чему плохому, так как записываются одинаковые данные, то есть порядок записи не может повлиять на результат выполнения.
+Таким образом, такое ложное срабатывание является следствием определения состояния гонки, которое используется при поиске. 
+
+Для анализа данного модуля потребовалось дополнение модели окружения регистрацией обработчиков структуры \textit{tcp\_congestion\_ops}.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 1adc906
+
+Данный коммит добавляет спин блокировку при доступе к некоторому списку \textit{lg->lg\_prealloc\_list} в функции \textit{ext4\_mb\_add\_n\_trim}.
+Анализ разделяемых данных доказывает, что данные \textit{lg} являются локальными, так как \textit{lg = ac->ac\_lg}, а \textit{ac} выделяется с помощью \textit{kmem\_cache\_alloc} в предыдущей функции \textit{ext4\_mb\_new\_blocks}. 
+При ручном анализе кода понять, как эти данные могут стать разделяемыми не удалось.
+Таким образом, нет полной уверенности в том, что данный коммит исправляет реульную ошибку.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 6b1246d
+
+Данный коммит исправляет высокоуровневую гонку.
+При вызове функции \textit{iscsit\_get\_np} сначала производится поиск подходящего сетевого портала np под спин блокировкой.
+Если он не был найден, то под него выделяется память и инициализируется.
+Затем, под той же спин-блокировкой новый портал вставляется в разделяемый список.
+Ошибка проявлялась в том случае, если одновременно приходило два запроса одинакового портала.
+Тогда в двух потоках создавался одинаковый портал, который затем добавлялся в глобальный список в двух экземплярах.
+Решением стало использование неразрывной блокировки от проверки существования портала до вставки его в список.
+
+Так как доступ к разделяемым данным (в данном случае разделяемому списку порталов) производился под блокировками, CPALockator не может определить состояние гонки.
+Поиск высокоуровневых гонок является нетривиальной задачей в первую очередь потому, что невозможно в общем случае определить высокоуровневую гонку.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 3627c07
+
+Данный коммит исправляет высокоуровневую гонку, которая происходит между \textit{acm\_suspend} и \textit{acm\_start\_wb}.
+При начале передачи данных в функции \textit{acm\_start\_wb} выставляется флаг \textit{transmitting}, что означает, что устройство не может быть остановлено до завершения передачи.
+В то же время передача данных не начнется, если будет выставлен флаг \textit{susp\_count}, который означает, что устройство готовится к остановке.
+В функции \textit{acm\_suspend} под блокировкой проверяется статус флага \textit{transmitting}, но затем блокировка снимается и захватывается перед установкой флага \textit{susp\_count}.
+Таким образом, была возможна ситуация, при которой флаг \textit{transmitting} будет установлен после проверки, и решением стало использование неразрывной блокировки между проверкой и установкой флага также, как это было сделано в \textit{acm\_suspend}.
+
+Как и в случае с предыдущим коммитом данный тип ошибок невозможно найти с помощью CPALockator в общем случае.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 3b91850
+
+Состояние гонки, исправляемое данным коммитом, заключается в том, что без должной синхронизации один поток мог завершиться раньше другого, но при этом разделяемые данные, которыми оперируют эти потоки, представляют собой память на стеке одного из них.
+В этом случае, после завершения основного потока, эта память становится невалидной. 
+В данном коммите встречаются сразу несколько сложностей для анализа.
+Первая сложность заключается в том, что явных доступов в данном случае нет, так как первый поток не изменяет свою память на стеке без блокировок.
+Более того, нет даже явного вызова функции освобождения этой памяти, типа \textit{kfree}.
+Таким образом, это даже не классическая ошибка типа use-after-free.
+Вторая сложность заключается в том, что анализ разделяемых данных может не определить, что локальная переменная на стеке становится разделяемой, что приведет к пропуску ошибки.
+Наконец, третья особенность заключается в использовании синхронизации другого типа (\textit{wait\_for\_completion}).
+Такая синхронизация может быть поддержана с помощью специального CPA, однако в текущей конфигурации такой CPA не реализован.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 0e2400e
+
+В коммите исправляется состояние гонки при большом количестве \textit{open/close} операций, что приводит к параллельному выполнению функции \textit{\_\_send\_control\_msg}, которая добавляла сообщение в разделяемую вирутальную очередь без блокировок, что могло привести к неконсистентному ее состоянию в случае параллельной модификации.
+Решением было использование спин-блокировки.
+
+CPALockator находит такое состояние гонки между \textit{\_\_send\_control\_msg}.
+Из коммита не совсем ясно, какой именно обработчик привел к состоянию гонки. 
+CPALockator приводит трассу, начинающуюся с \textit{virtcons\_restore}. 
+
+Для данной верификационной задачи потребовалось добавление модельной регистрации \textit{register\_virtio\_driver}.
+
+\textbf{Статус:} найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 2d4cf3d
+
+В коммите исправляется ошибка, связанная с некорректным доступом к очереди, которая определена на стеке.
+При некорректной синхронизации один поток (\textit{usbnet\_terminate\_urbs}) может завершиться раньше, чем произойдет доступ к очереди из другого потока (\textit{usbnet\_bh}).
+Данный модуль экспортирует объявленные обработчики, включая \textit{usbnet\_probe}, для вызова из других модулей. 
+Таким образом, требуетс более сложная схема подготовки верификационной задачи, которая позволит получать такие задачи на основе нескольких модулей.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 0f90c9c
+
+В коммите добавляется дополнительная проверка под блокировкой для того, чтобы избежать деления на ноль.
+Нулевое значение было возможно при модификации значения другим потоков.
+Таким образом, данная ошибка не являлась состоянием гонки в чистом виде, так как одновременного доступа к разделяемой памяти не было.
+Кроме того, из коммита не до конца понятно, какой именно поток мог модифицировать значение переменной.
+Скорее всего, это \textit{ttm\_dma\_pool\_release}, который выставляется, как обработчик некоторого события.
+Поэтму необходима более сложная модель окружения.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} aea9dd5
+
+% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=aea9dd5
+% timeout, 300k lock, fs/btrfs/btrfs.ko, 3 потоков, что-то нашлось
+% Содержит большое количество функциональных указателей, т.е. не только в потоках дело
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 2e4ce49
+
+Патч исправляет ошибку, связанную с тем, что выполнение scsi комманды (функция \textit{complete\_scsi\_command}) завершается (\textit{scsi\_done}) до освобождения ресурсов (\textit{cmd\_free}).
+Таким образом, может оказаться, что выполнение другой команды начнется до того, как будут освобождены ресурсы. 
+По сути операция \textit{scsi\_done} используется, как неявная синхронизация.
+В данный момент CPALockator не поддерживает такие примитивы синхронизации.
+
+% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=2e4ce49
+% timeout, 25k lock, drivers/scsi/hpsa.ko, 13 потоков, что-то нашлось
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} f0c626f
+
+В коммите исправляется состояние гонки, которое возможно между \textit{iscsit\_del\_np} и \textit{\_\_iscsi\_target\_login\_thread}.
+Последняя выставляет некоторый указатель на поток в ноль, а первая пытается остановить поток по этому указателю, что приводит к разыменованию нулевого указателя.
+Исправление переносит обнуление указателя из одной функции в другую.
+CPALockator выдает предупрждение для этого указателя для доступов в функциях \textit{\_\_iscsi\_target\_login\_thread} и \textit{iscsit\_reset\_np\_thread}.
+При этом во второй функции перед чтением указателя присутствует проверка его значения под блокировкой, то есть данный код может быть выполнен параллельно.
+Таким образом, можно заключить, что найдено другое потенциальное предупреждение о состоянии гонки.
+
+Для данного модуля потребовалось добавление регистрации структуры \textit{target\_fabric\_np\_base\_attribute} в модель окружения.
+% Вставлено создание потока kthread_create_on_node, раньше был вызов функции, а также np_base
+
+\textbf{Статус:} найдена другая ошибка.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 34596a8
+
+В коммите исправляется высокоуровневая гонка между функциями операциями \textit{open} и \textit{delete}.
+Удаление девайса из списка \textit{idr} списка и его добавление происходит под двумя блокировками: rtnl и мьютекс, но его поиск  в этой очереди в функции \textit{idr\_find} производится только при захваченном мьютексе.
+Таким образом, возможна такая ситуация: при добавлении очереди к девайсу он находится в списке \textit{idr}, затем блокировка снимается, выполняются различные действия, которые прерываются операцией \textit{idr\_remove}. 
+Она удаляет соответствующий девайс из списка, а потом переключается обратно, и в итоге оказывается, что очередь была добавлена к удаленному девайсу.
+
+Как и другие высокоуровневые гонки, данная ошибка не может быть найдена напрямую с помощью CPALockator.
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 7357404
+
+В коммите исправляется два состояние гонки, связанное с параллельным доступом к счетчику \textit{alloc\_blocks}, один из ошибочных доступов в функции \textit{hfsplus\_file\_extend}, а другой -- в функции \textit{hfsplus\_file\_truncate}.
+Отметим, что это именно два ошибочных доступа, которые могут образовывать состояние гонки с другими доступами.
+В каждой из этих функций уже находится соответствующий мьютекс, и исправление заключается в расширении области его действия.
+Так как CPALockator выдает одно предупреждение на каждую переменную, он находит только одно из двух мест, в данном случае он выдает предупреждение о доступах в функциях \textit{hfsplus\_file\_truncate} и \textit{hfsplus\_inode\_read\_fork}, которые образуют потенциальное состояние гонки.
+Таким образом, найдено одно из двух исправлений.
+
+Для данного модуля потребовалось добавление функций регистрации структур \textit{hfsplus\_btree\_ops} и \textit{hfsplus\_ops}, \textit{hfsplus\_file\_operations} в модель окружения.
+% Вопрос с честной конфигурацией TM без лимитов
+
+\textbf{Статус:} найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 10ef175
+
+% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=10ef175
+% timeout, 50k lock, sound/soc/snd-soc-core.ko, 26 потоков вместо 3-4
+
+\textbf{Статус:} не найдена.
+
+\vspace{1cm}
+
+\textbf{Коммит:} 4036523
+
+% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=4036523
+% timeout, 260k lock, drivers/gpu/drm/i915/i915.ko, 24 потока вместо 3-4
+%Вставлена регистрация drm_info и drm_device
+
+\textbf{Статус:} не найдена.
+
+
 %_____________________
 
 %Для крупных листингов есть два способа. Первый красивый, но в нём могут быть проблемы с поддержкой кириллицы (у вас может встречаться в комментариях и
