Update commit analysis

--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -1119,7 +1119,7 @@ l_{\nu}
 
 Данный патч исправляет состояние гонки в между \textit{bond\_store\_updelay/downdelay}
 и \textit{bond\_store\_miimon}, которое может привести к делению на ноль.
-Важной особенностью данного патча является то, что он не полностью исправляет ошибку: для двух функций \textit{bond\_store\_updelay/downdelay} добавляется захват блокировки \textit{rtnl}, однако, второй поток \textit{bond\_store\_miimon}, в котором производится установка нулевого значения, по-прежнему вызывается без блокировок.
+Важной особенностью данного патча является то, что он не полностью исправляет ошибку: для двух функций \textit{bond\_store\_updelay}/\textit{downdelay} добавляется захват блокировки \textit{rtnl}, однако, второй поток \textit{bond\_store\_miimon}, в котором производится установка нулевого значения, по-прежнему вызывается без блокировок.
 Таким образом, состояние гонки остается возможным.
 Данный коммит был включен в версию Linux v2.6.32.61, при том что в версию Linux v3.7-rc8 был ранее включен коммит fbb0c41, который добавлял соответствующую блокировку в \textit{bond\_store\_miimon}.
 Однако, он включал в себя еще несколько изменений и, видимо, поэтому не был в это же время применен к ветке 2.6.
@@ -1181,7 +1181,7 @@ CPALockator выдает предупреждение о том, что функ
 Данный коммит добавляет спин блокировку при доступе к некоторому списку \textit{lg->lg\_prealloc\_list} в функции \textit{ext4\_mb\_add\_n\_trim}.
 Анализ разделяемых данных доказывает, что данные \textit{lg} являются локальными, так как \textit{lg = ac->ac\_lg}, а \textit{ac} выделяется с помощью \textit{kmem\_cache\_alloc} в предыдущей функции \textit{ext4\_mb\_new\_blocks}. 
 При ручном анализе кода понять, как эти данные могут стать разделяемыми не удалось.
-Таким образом, нет полной уверенности в том, что данный коммит исправляет реульную ошибку.
+Таким образом, нет полной уверенности в том, что данный коммит исправляет реальную ошибку.
 
 \textbf{Статус:} не найдена.
 
@@ -1275,9 +1275,10 @@ CPALockator приводит трассу, начинающуюся с \textit{v
 
 \textbf{Коммит:} aea9dd5
 
-% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=aea9dd5
-% timeout, 300k lock, fs/btrfs/btrfs.ko, 3 потоков, что-то нашлось
-% Содержит большое количество функциональных указателей, т.е. не только в потоках дело
+В коммите добавляется проверка значения некоторой переменной, которая могла быть изменена другим потоком. 
+При этом состояние гонки не исправляется, а лишь обнаруживается, то есть, если значение было изменено, значит, произошла гонка, и возвращается код ошибки.
+Анализ этого модуля приводит к исчерпанию лимита по времени, так как модуль \textit{fs/btrfs/btrfs.ko} достаточно объемный и содержит около 300 000 строк кода, а также большое количество функциональных указателей, которые всегда вызывают трудности у инструментов статического анализа.
+\todo{При этом даже построение первой, самой неточной абстракции не успевает завершиться.}
 
 \textbf{Статус:} не найдена.
 
@@ -1288,10 +1289,9 @@ CPALockator приводит трассу, начинающуюся с \textit{v
 Патч исправляет ошибку, связанную с тем, что выполнение scsi комманды (функция \textit{complete\_scsi\_command}) завершается (\textit{scsi\_done}) до освобождения ресурсов (\textit{cmd\_free}).
 Таким образом, может оказаться, что выполнение другой команды начнется до того, как будут освобождены ресурсы. 
 По сути операция \textit{scsi\_done} используется, как неявная синхронизация.
+% Почему не находится доступ без блокировок?
 В данный момент CPALockator не поддерживает такие примитивы синхронизации.
-
-% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=2e4ce49
-% timeout, 25k lock, drivers/scsi/hpsa.ko, 13 потоков, что-то нашлось
+Кроме этого, из-за большого количества уточнений анализ данного модуля не может завершиться за отведенный лимит времени.
 
 \textbf{Статус:} не найдена.
 
@@ -1343,8 +1343,11 @@ CPALockator выдает предупрждение для этого указа
 
 \textbf{Коммит:} 10ef175
 
+Коммит исправляет ошибку связанную с состоянием гонки следующим образом
+% откуда вызывается dpcm_fe_dai_trigger? ТАм в итоге есть гонка или нет?
 % https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=10ef175
 % timeout, 50k lock, sound/soc/snd-soc-core.ko, 26 потоков вместо 3-4
+Анализ данного модуля приводит к исчерпанию лимита по времени, так как модуль \textit{sound/soc/snd-soc-core.ko} достаточно объемный и содержит около 50 000 строк кода, около 26 потоков, а также большое количество функциональных указателей, которые всегда вызывают трудности у инструментов статического анализа.
 
 \textbf{Статус:} не найдена.
 
@@ -1352,8 +1355,8 @@ CPALockator выдает предупрждение для этого указа
 
 \textbf{Коммит:} 4036523
 
-% https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=4036523
-% timeout, 260k lock, drivers/gpu/drm/i915/i915.ko, 24 потока вместо 3-4
+Коммит исправлет состояние гонки, связанное с параллельной модификацией списка, добавлением спин блокировки.
+Анализ данного модуля приводит к исчерпанию лимита по времени, так как модуль \textit{drivers/gpu/drm/i915/i915.ko} достаточно объемный и содержит около 260 000 строк кода, около 24 потока, а также большое количество функциональных указателей, которые всегда вызывают трудности у инструментов статического анализа.
 %Вставлена регистрация drm_info и drm_device
 
 \textbf{Статус:} не найдена.
